# deskvio

./: .gitignore  CHANGELOG.md  README.md  README.zh-CN.md  THIRD_PARTY_LICENSES.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
bundled-git/: README.md
src/: App.css  App.tsx  HelpView.tsx  HubView.tsx  MarkdownBody.tsx  RepoView.tsx  SettingsPanel.tsx  api.ts  fileTree.ts  gitPaths.ts  repoFileListing.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  git.rs  lib.rs  main.rs
